# book_store

./: .gitignore  README.md  db.sqlite3  pyproject.toml
book_outlet/: admin.py  forms.py  models.py  urls.py  views.py
book_outlet/migrations/: 0001_initial.py  0002_book_author_book_is_bestselling_alter_book_rating_and_more.py  0003_book_slug.py  0004_alter_book_slug.py  0005_author_alter_book_slug_alter_book_author.py  0006_alter_book_author.py  0007_address.py  0008_address_country_address_state_author_address.py  0009_alter_address_city_alter_address_country_and_more.py  0010_address_slug.py  0011_alter_author_address.py  0012_country_alter_address_options_and_more.py
book_outlet/templates/: base.html
book_outlet/templates/book_outlet/: base.html  book_detail.html  generic_form.html  generic_table.html  index.html
book_store/: admin.py  models.py  settings.py  urls.py  views.py
book_store/migrations/: 0001_initial.py
book_store/templates/book_store/: base.html  book_detail.html  generic_form.html  generic_table.html  index.html
config/: settings.py  urls.py  views.py
src/book_store/: __init__.py
static/: app.css
