[project]
name = "book-store"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Fabrizio", email = "fabrizio.nastri@flexup.org" }
]
dependencies = [
    "django>=5.1.4",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/book_store"]
